--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -174,7 +174,7 @@
 										alt="User Image">
 								</div>
 								<div class="doc-info-cont">
-									<h4 class="doc-name">Dr. Darren Elder</h4>
+									<h4 class="doc-name" id="name"></h4>
 									<p class="doc-speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
 									<p class="doc-department"><img src="assets/img/specialities/specialities-05.png"
 											class="img-fluid" alt="Speciality">Dentist</p>
